v3 UI: fixes @ToolUi.Heading not showing up.

--- a/tool-ui/src/main/webapp/style/v3/abstract.less
+++ b/tool-ui/src/main/webapp/style/v3/abstract.less
@@ -585,6 +585,7 @@ figure,
     background-color: white;
     margin: 0 !important;
     padding: 20px 0 10px 0;
+    position: relative;
   }
 
   .objectInputs-small &:before {
